add more skills

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li class="list-inline-item last-item"><a href="#"><i class="fab fa-codepen"></i></a></li> -->
                 </ul>
             </div><!--//profile-->
-            <a class="btn btn-cta-primary float-right" href="https://www.linkedin.com/in/ghazi-sultan-606630b6/" target="_blank"><i class="fas fa-paper-plane"></i> Contact Me</a>
+            <a class="btn btn-cta-primary float-right" href="https://www.linkedin.com/in/ghazi-sultan-606630b6/" target="_blank"><i class="fas fa-paper-plane"></i> Hire Me</a>
         </div><!--//container-->
     </header><!--//header-->
 
@@ -57,7 +57,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I graduated in May 2019 from IIT Kharagpur with mostly the knowledge of Algorithms, Data Structures and web development. Fast forward to December 2019 and I have developed a fully functional Django Web Application for the UK Real Estate Market, all by myself, from Designing to Deployment. Now I have strong confidence in my abilities that given the idea, I can develop any web application whatsoever. If you've got an idea, contact me and watch it turning it into reality.</p>
+                            <p>I graduated in May 2019 from IIT Kharagpur with mostly the knowledge of Algorithms, Data Structures and web development. Fast forward to December 2019 and I have developed a fully functional Django Web Application for the UK Real Estate Market, all by myself, from Designing to Deployment. Now I have strong confidence in my abilities that given the idea, I can develop any web application whatsoever. If you've got an idea, contact me and watch it turning into reality.</p>
 
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -71,6 +71,9 @@
                             <div class="item featured text-center">
                                 <h3 class="title"><a href="https://www.agentsdash.com" target="_blank">AgentsDash.com</a></h3>
                                 <p class="summary">Realestate Agents Performance Dashboard</p>
+                                <div class="text-left">
+                                  Technology used:  <a href="https://www.python.org/" target="_blank">Python</a>, <a href="https://www.djangoproject.com/" target="_blank">Django</a>, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">JavaScript</a>, <a href="https://jquery.com/" target="_blank">Jquery</a>, <a href="https://git-scm.com/" target="_blank">Git</a>, <a href="https://datatables.net/" target="_blank">DataTables</a>, <a href="https://www.highcharts.com/" target="_blank">HightCharts</a>, <a href="https://nginx.org/" target="_blank">Nginx</a>
+                                </div>
                                 <div class="featured-image has-ribbon">
                                     <a href="https://www.agentsdash.com"
                                     target="_blank">
@@ -82,7 +85,7 @@
                                 </div>
 
                                 <div class="desc text-left">
-                                    <p>I developed this web application from scratch using <a href="https://www.djangoproject.com/" target="_blank">Django</a> Framework. I used <a href="https://jquery.com/" target="_blank">Jquery</a>, a javascript library for DOM manipulation and asynchronous API calls. I was solely responsible for all aspects of this project i.e. Design, Development and Deployment. I used <a href="https://git-scm.com/" target="_blank">Git</a> as version control tool throughout. I used dbsqlite for development and MySQL database for production. I deployed it on <a href="https://www.digitalocean.com/" target="_blank">DigitalOcean</a> with uwsgi and nginx. For tabular representation and efficient analysis of data, I customised <a href="https://datatables.net/" target="_blank">DataTables</a>. I also customised <a href="https://www.highcharts.com/" target="_blank">HightCharts</a>, a javascript graph library for graphical representation and prediction of future sales.</p>
+                                    This SaaS application has been developed after years of careful research for the real-estate companies in the UK. It enables companies to measure the performance of real-estate agents, progress of leads and performance of the company as a whole. It also has a very efficient data table which displays all the data in one place and provides features like search, filter and column selection.
                                 </div><!--//desc-->
                                 <a class="btn btn-cta-secondary" href="https://agentsdash.com" target="_blank"><i class="fas fa-external-link-alt"></i> Visit Website</a>
                             </div><!--//item-->
@@ -93,7 +96,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title"><a href="javascript:void(0)">Beautiful Customised Data Table</a> <span class="badge badge-theme">Free</span></h3>
-                                    <p class="mb-2">For a newbie, it takes a lot of time to wrap their head around various features of the data table. So, I created a customised data table with features like <i>search</i>, <i>category filter</i> and <i>column selecter</i> which can be easily integrated into any project.</p>
+                                    <p class="mb-2">For a newbie, it takes a lot of time to wrap their head around various features of the data table. So, I created a customised data table with features like <i>search</i>, <i>category filter</i> and <i>column selector</i>, which can be easily integrated into any project.</p>
                                     <p><a class="more-link" href="https://github.com/iamghazi/custom-data-table" target="_blank"><i class="fas fa-external-link-alt"></i>Download</a></p>
                                 </div>
                             </div>
@@ -226,70 +229,68 @@
                 </aside><!--//aside-->
 
                 <aside class="skills aside section">
-                    <div class="section-inner">
-                        <h2 class="heading">Skills</h2>
+                    <div class="section-inner" style="padding-bottom:10px!important;">
+                        <h2 class="heading">Skills - Expert</h2>
                         <div class="content">
                             <p class="intro">
                                 </p>
 
                             <div class="skillset">
-
                                 <div class="item">
-                                    <h3 class="level-title">Python &amp; Django<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Expert"><i class="fas fa-info-circle"></i>Expert</span></h3>
-                                    <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="96%">
-                                        </div>
-                                    </div><!--//level-bar-->
+                                    <h3 class="level-title">Python &amp; Django</h3>
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">Javascript &amp; jQuery<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Expert"><i class="fas fa-info-circle"></i>Expert</span></h3>
-                                    <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="96%">
-                                        </div>
-                                    </div><!--//level-bar-->
+                                    <h3 class="level-title">Javascript &amp; jQuery</h3>
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">HTML5, CSS3 &amp; Bootstrap<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Expert"><i class="fas fa-info-circle"></i>Expert</span></h3>
-                                    <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="96%">
-                                        </div>
-                                    </div><!--//level-bar-->
+                                    <h3 class="level-title">HTML5, CSS3 &amp; Bootstrap</h3>
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">Software as a Service (SaaS)<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Pro"><i class="fas fa-info-circle"></i>Pro</span></h3>
-                                    <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="85%">
-                                        </div>
-                                    </div><!--//level-bar-->
+                                    <h3 class="level-title">Software as a Service (SaaS)</h3>
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">Google App Script<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Pro"><i class="fas fa-info-circle"></i>Pro</span></h3>
-                                    <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="85%">
-                                        </div>
-                                    </div><!--//level-bar-->
+                                    <h3 class="level-title">Google App Script</h3>
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">Git &amp; Github<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Pro"><i class="fas fa-info-circle"></i>Pro</span></h3>
-                                    <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="85%">
-                                        </div>
-                                    </div><!--//level-bar-->
+                                    <h3 class="level-title">Git &amp; Github</h3>
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">Algorithms &amp; Data Structures<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Pro"><i class="fas fa-info-circle"></i>Pro</span></h3>
-                                    <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="85%">
-                                        </div>
-                                    </div><!--//level-bar-->
+                                    <h3 class="level-title">MySQL</h3>
                                 </div><!--//item-->
 
+                                <div class="item">
+                                    <h3 class="level-title">SQLite</h3>
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">Algorithms &amp; Data Structures</h3>
+                                </div><!--//item-->
+                            </div>
+                        </div><!--//content-->
+                    </div><!--//section-inner-->
+
+                    <div class="section-inner" style="padding-top:10px!important;">
+                        <h2 class="heading">Skills - Experienced</h2>
+                        <div class="content">
+                            <div class="skillset">
+                                <div class="item">
+                                    <h3 class="level-title">React &amp; Nuxt.js</h3>
+                                </div><!--//item-->
+                                <div class="item">
+                                    <h3 class="level-title">Node.js &amp; Express</h3>
+                                </div><!--//item-->
+                                <div class="item">
+                                    <h3 class="level-title">MongoDB &amp; Mongoose</h3>
+                                </div><!--//item-->
+                                <div class="item">
+                                    <h3 class="level-title">Material-UI</h3>
+                                </div><!--//item-->
                                 <p><a class="more-link" href="https://www.linkedin.com/in/ghazi-sultan-606630b6/detail/skills/" target="_blank"><i class="fas fa-external-link-alt"></i>More on LinkedIn</a></p>
                             </div>
                         </div><!--//content-->
@@ -345,16 +346,6 @@
                     </div><!--//section-inner-->
                 </aside><!--//section-->
 
-                <!-- <aside class="blog aside section">
-                    <div class="section-inner">
-                        <h2 class="heading">Latest Blog Posts</h2>
-                        <p>You can use Sascha Depold's <a href="https://github.com/sdepold/jquery-rss" target="_blank">jQuery RSS plugin</a> to pull in your blog post feeds.</p>
-                        <div id="rss-feeds" class="content">
-
-                        </div>
-                    </div>
-                </aside> -->
-
                 <aside class="credits aside section">
                     <div class="section-inner">
                         <h2 class="heading">Credits</h2>
@@ -369,20 +360,6 @@
 
                                 <!-- <li><a href="https://github.com/sdepold/jquery-rss" target="_blank"><i class="fas fa-external-link-alt"></i>jQuery RSS</a></li> -->
                             </ul>
-
-                            <!-- <hr/> -->
-
-                             <!-- <p class="pt-2">This Bootstrap 4 portfolio template is handcrafted by UX designer <a href="https://twitter.com/3rdwave_themes" target="_blank">Xiaoying Riley</a> at <a href="https://themes.3rdwavemedia.com/" target="_blank">3rd Wave Media</a> for developers and is <strong>FREE</strong> as long as you keep the footer attribution link.</p>
-                             <p>If you’d like to <strong>use this template without the attribution link</strong>, you can <a href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/free-bootstrap-portfolio-theme-for-web-developers/" target="_blank">buy the commercial license</a>.</p>
-
-                             <a class="btn btn-cta-primary btn-download" href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/free-bootstrap-portfolio-theme-for-web-developers/" target="_blank"><i class="fas fa-download"></i> I want to download</a>
-                            <hr/>
-                            <h5 class="subheading pt-3">Want more free Bootstrap themes and templates?</h5>
-                            <p>Check out our <a href="https://themes.3rdwavemedia.com/bootstrap-templates/free/">collection of free themes and templates.</a></p>
-                            <p>Follow <a href="https://twitter.com/3rdwave_themes" target="_blank">Xiaoying</a> on twitter so you don't miss any future freebies!</p>
-
-                            <a class="btn btn-cta-secondary btn-follow" href="https://twitter.com/3rdwave_themes" target="_blank"><i class="fab fa-twitter"></i> Follow on twitter</a> -->
-
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </aside><!--//section-->
