add 2 new projects

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I graduated in May 2019 from IIT Kharagpur with mostly the knowledge of Algorithms, Data Structures and web development. Fast forward to December 2019 and I have developed a fully functional Django Web Application for the UK Real Estate Market, all by myself, from Designing to Deployment. Now I have strong confidence in my abilities that given the idea, I can develop any web application whatsoever. If you've got an idea, contact me and watch it turning into reality.</p>
+                            <p>I graduated in May 2019 from IIT Kharagpur with mostly the knowledge of Algorithms, Data Structures and web development. Fast forward to March, 2020 and I have developed a fully functional Django Web Application (CRM) for the UK Real Estate Market, a General purpose CRM and another CRM to manage companies interested in investing in Bihar, all by myself, from Designing to Deployment. Now I have strong confidence in my abilities that given the idea, I can develop any web application whatsoever. If you've got an idea, contact me and watch it turning into reality.</p>
 
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -79,9 +79,6 @@
                                     target="_blank">
                                     <img class="img-fluid project-image" src="assets/images/projects/agentsdash.png" alt="AgentsDash" />
                                     </a>
-                                    <div class="ribbon">
-                                        <div class="text">New</div>
-                                    </div>
                                 </div>
 
                                 <div class="desc text-left">
@@ -90,6 +87,28 @@
                                 <a class="btn btn-cta-secondary" href="https://agentsdash.com" target="_blank"><i class="fas fa-external-link-alt"></i> Visit Website</a>
                             </div><!--//item-->
                             <hr class="divider" />
+                            <div class="item row">
+                                <a class="col-md-4 col-12" href="javascript:void(0)">
+                                <img class="img-fluid project-image" src="assets/images/projects/bestcrm.png" alt="project name" height="105" width="203" />
+                                </a>
+                                <div class="desc col-md-8 col-12">
+                                    <h3 class="title"><a href="javascript:void(0)">General Purpose CRM</a></h3>
+                                    <p class="mb-2">A general purpose CRM which I built from scratch. It includes features like deal categorization in stages, customisation to fit unique sales process, task scheduling, insights and reports, and gmail integration.</p>
+                                    <p>Technology: Django, Python, Javascript, Jquery, HTML, CSS, Git, Nginx</p>
+                                </div>
+                            </div>
+                            <!--//item-->
+                            <div class="item row">
+                                <a class="col-md-4 col-12" href="javascript:void(0)">
+                                <img class="img-fluid project-image" src="assets/images/projects/investbihar.png" alt="project name" height="105" width="203" />
+                                </a>
+                                <div class="desc col-md-8 col-12">
+                                    <h3 class="title"><a href="javascript:void(0)">Invest Bihar CRM</a></h3>
+                                    <p class="mb-2">A CRM built from scratch to manage the companies which are interested in investing in Bihar, India. Responsible for all the aspects of the project: Design, Development and Deployment.</p>
+                                    <p>Technology: Django, Python, Javascript, Jquery, HTML, CSS, Git, Nginx,</p>
+                                </div>
+                            </div>
+                            <!--//item-->
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="javascript:void(0)">
                                 <img class="img-fluid project-image" src="assets/images/projects/custom-data-table.png" alt="project name" height="105" width="203" />
