add relevant courses

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I graduated in May 2019 from IIT Kharagpur with mostly the knowledge of Algorithms, Data Structures and web development. Fast forward to March, 2020 and I have developed a fully functional Django Web Application (CRM) for the UK Real Estate Market, a General purpose CRM and another CRM to manage companies interested in investing in Bihar, all by myself, from Designing to Deployment. Now I have strong confidence in my abilities that given the idea, I can develop any web application whatsoever. If you've got an idea, contact me and watch it turning into reality.</p>
+                            <p>I graduated in May 2019 from IIT Kharagpur with mostly the knowledge of Algorithms, Data Structures and web development. Fast forward to March, 2020 and I have developed a fully functional <a href="https://agentsdash.com">Django Web Application (CRM)</a> for the UK Real Estate Market, a <a href="bestcrm.pythonanywhere.com">General Purpose CRM</a> and another CRM for <a href="https://investbihar.co.in">Invest Bihar</a>, all by myself, from Designing to Deployment. Now I have strong confidence in my abilities that given the idea, I can develop any web application whatsoever. If you've got an idea, contact me and watch it turning into reality.</p>
 
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -312,6 +312,38 @@
                                 </div><!--//item-->
                                 <p><a class="more-link" href="https://www.linkedin.com/in/ghazi-sultan-606630b6/detail/skills/" target="_blank"><i class="fas fa-external-link-alt"></i>More on LinkedIn</a></p>
                             </div>
+                        </div><!--//content-->
+                    </div><!--//section-inner-->
+                </aside><!--//section-->
+
+                <aside class="education aside section">
+                    <div class="section-inner">
+                        <h2 class="heading">Relevant Courses</h2>
+                        <div class="content">
+                            <div class="item">
+                                <h3 class="title"><i class="fas fa-laptop-code"></i> Programming and Data Structures</h3>
+                                <h4 class="university">IIT Kharagpur</span></h4>
+                            </div><!--//item-->
+
+                            <div class="item">
+                                <h3 class="title"><i class="fas fa-laptop-code"></i> Design & Analysis of Algorithms</h3>
+                                <h4 class="university">Stanford University, Coursera</span></h4>
+                            </div><!--//item-->
+
+                            <div class="item">
+                                <h3 class="title"><i class="fas fa-laptop-code"></i> Python and Django Full Stack Web Developer Bootcamp</h3>
+                                <h4 class="university">Udemy</span></h4>
+                            </div><!--//item-->
+
+                            <div class="item">
+                                <h3 class="title"><i class="fas fa-network-wired"></i> Computer Networks</h3>
+                                <h4 class="university">IIT Kharagpur</span></h4>
+                            </div><!--//item-->
+
+                            <div class="item">
+                                <h3 class="title"><i class="fas fa-infinity"></i> Probability & Statistics</h3>
+                                <h4 class="university">IIT Kharagpur</span></h4>
+                            </div><!--//item-->
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </aside><!--//section-->
