--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I graduated in May 2019 from IIT Kharagpur with mostly the knowledge of Algorithms, Data Structures and web development. Fast forward to March, 2020 and I have developed a fully functional <a href="https://agentsdash.com">Django Web Application (CRM)</a> for the UK Real Estate Market, a <a href="bestcrm.pythonanywhere.com">General Purpose CRM</a> and another CRM for <a href="https://investbihar.co.in">Invest Bihar</a>, all by myself, from Designing to Deployment. Now I have strong confidence in my abilities that given the idea, I can develop any web application whatsoever. If you've got an idea, contact me and watch it turning into reality.</p>
+                            <p>I graduated in May 2019 from IIT Kharagpur with mostly the knowledge of Algorithms, Data Structures and web development. Fast forward to March, 2020 and I have developed a fully functional <a href="https://agentsdash.com" target="_blank">Django Web Application (CRM)</a> for the UK Real Estate Market, a <a href="bestcrm.pythonanywhere.com" target="_blank">General Purpose CRM</a> and another CRM for <a href="http://www.investbihar.co.in/" target="_blank">Invest Bihar</a>, all by myself, from Designing to Deployment. Now I have strong confidence in my abilities that given the idea, I can develop any web application whatsoever. If you've got an idea, contact me and watch it turning into reality.</p>
 
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -72,7 +72,7 @@
                                 <h3 class="title"><a href="https://www.agentsdash.com" target="_blank">AgentsDash.com</a></h3>
                                 <p class="summary">Realestate Agents Performance Dashboard</p>
                                 <div class="text-left">
-                                  Technology used:  <a href="https://www.python.org/" target="_blank">Python</a>, <a href="https://www.djangoproject.com/" target="_blank">Django</a>, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">JavaScript</a>, <a href="https://jquery.com/" target="_blank">Jquery</a>, <a href="https://git-scm.com/" target="_blank">Git</a>, <a href="https://datatables.net/" target="_blank">DataTables</a>, <a href="https://www.highcharts.com/" target="_blank">HightCharts</a>, <a href="https://nginx.org/" target="_blank">Nginx</a>
+                                  Technology:  <a href="https://www.python.org/" target="_blank">Python</a>, <a href="https://www.djangoproject.com/" target="_blank">Django</a>, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">JavaScript</a>, <a href="https://jquery.com/" target="_blank">Jquery</a>, <a href="https://git-scm.com/" target="_blank">Git</a>, <a href="https://datatables.net/" target="_blank">DataTables</a>, <a href="https://www.highcharts.com/" target="_blank">HightCharts</a>, <a href="https://nginx.org/" target="_blank">Nginx</a>
                                 </div>
                                 <div class="featured-image has-ribbon">
                                     <a href="https://www.agentsdash.com"
@@ -94,7 +94,7 @@
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title"><a href="javascript:void(0)">General Purpose CRM</a></h3>
                                     <p class="mb-2">A general purpose CRM which I built from scratch. It includes features like deal categorization in stages, customisation to fit unique sales process, task scheduling, insights and reports, and gmail integration.</p>
-                                    <p>Technology: Django, Python, Javascript, Jquery, HTML, CSS, Git, Nginx</p>
+                                    <p>Technology:  <a href="https://www.python.org/" target="_blank">Python</a>, <a href="https://www.djangoproject.com/" target="_blank">Django</a>, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">JavaScript</a>, <a href="https://jquery.com/" target="_blank">Jquery</a>, <a href="https://git-scm.com/" target="_blank">Git</a>, <a href="https://datatables.net/" target="_blank">DataTables</a>, <a href="https://www.highcharts.com/" target="_blank">HightCharts</a>, <a href="https://nginx.org/" target="_blank">Nginx</a></p>
                                 </div>
                             </div>
                             <!--//item-->
@@ -105,7 +105,7 @@
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title"><a href="javascript:void(0)">Invest Bihar CRM</a></h3>
                                     <p class="mb-2">A CRM built from scratch to manage the companies which are interested in investing in Bihar, India. Responsible for all the aspects of the project: Design, Development and Deployment.</p>
-                                    <p>Technology: Django, Python, Javascript, Jquery, HTML, CSS, Git, Nginx,</p>
+                                    <p>Technology:  <a href="https://www.python.org/" target="_blank">Python</a>, <a href="https://www.djangoproject.com/" target="_blank">Django</a>, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">JavaScript</a>, <a href="https://jquery.com/" target="_blank">Jquery</a>, <a href="https://git-scm.com/" target="_blank">Git</a>, <a href="https://datatables.net/" target="_blank">DataTables</a>, <a href="https://www.highcharts.com/" target="_blank">HightCharts</a>, <a href="https://nginx.org/" target="_blank">Nginx</a></p>
                                 </div>
                             </div>
                             <!--//item-->
