--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://iamghazi.github.io/assets/images/projects/agentsdash.png" />
+	<meta property="og:image:width" content="925" />
+	<meta property="og:image:height" content="530" />
     <!-- <link rel="shortcut icon" href="favicon.ico"> -->
 
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
